fix style issue with profile image too close to back button

--- a/SeeSpotHelp/SeeSpotHelp/App/style/_member.scss
+++ b/SeeSpotHelp/SeeSpotHelp/App/style/_member.scss
@@ -21,4 +21,7 @@
     color: $almostWhite;
     text-decoration: underline;
   }
+  .head-shot {
+    padding-top: 5px;
+  }
 }
